@@ -7,15 +7,17 @@ import (
 )
 
 type httpConfig struct {
-	config.ProtocolCommon `config:",inline"`
-	SendAllHeaders        bool     `config:"send_all_headers"`
-	SendHeaders           []string `config:"send_headers"`
-	SplitCookie           bool     `config:"split_cookie"`
-	RealIPHeader          string   `config:"real_ip_header"`
-	IncludeBodyFor        []string `config:"include_body_for"`
-	HideKeywords          []string `config:"hide_keywords"`
-	RedactAuthorization   bool     `config:"redact_authorization"`
-	MaxMessageSize        int      `config:"max_message_size"`
+	config.ProtocolCommon  `config:",inline"`
+	SendAllHeaders         bool     `config:"send_all_headers"`
+	SendHeaders            []string `config:"send_headers"`
+	SplitCookie            bool     `config:"split_cookie"`
+	RealIPHeader           string   `config:"real_ip_header"`
+	IncludeBodyFor         []string `config:"include_body_for"`
+	IncludeRequestBodyFor  []string `config:"include_request_body_for"`
+	IncludeResponseBodyFor []string `config:"include_response_body_for"`
+	HideKeywords           []string `config:"hide_keywords"`
+	RedactAuthorization    bool     `config:"redact_authorization"`
+	MaxMessageSize         int      `config:"max_message_size"`
 }
 
 var (
